--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "highlightnow",
+  "name": "highlighttext",
   "version": "1.0.0",
   "private": true,
   "description": "Highlight text while reading. Copy what matters. No clutter.",
