--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Highlight text while reading. Copy what matters. No clutter.",
   "scripts": {
     "dev": "vite build --watch",
-    "build": "vite build && cp manifest.json dist/manifest.json",
+    "build": "vite build && node -e \"require('fs').copyFileSync('manifest.json', 'dist/manifest.json')\" && node -e \"require('fs').copyFileSync('highlighttext.png', 'dist/highlighttext.png')\"",
     "test": "vitest"
   },
   "devDependencies": {
